force-app/main/default/objects/OA_SAM_Entity_Staging__c/OA_SAM_Entity_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging for SAM.gov Entity API results (Phase 2 dormant SAM connector foundation). Human-review-gated; no data flows to a Lead without review. No secrets are stored here.</description>
    <label>OA SAM Entity Staging</label>
    <nameField>
        <displayFormat>SAM-{00000}</displayFormat>
        <label>SAM Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA SAM Entity Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>