force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Business_Types__c.field-meta.xml
<CustomField>
    <fullName>Business_Types__c</fullName>
    <description>Comma-joined SAM.gov business-type / socioeconomic certification codes.</description>
    <label>Business Types</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>