force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/CAGE_Code__c.field-meta.xml
<CustomField>
    <fullName>CAGE_Code__c</fullName>
    <description>Commercial and Government Entity (CAGE) code from SAM.gov.</description>
    <label>CAGE Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>