force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>Idempotency key = Source_Run_ID__c + "|" + UEI__c. External Id + Unique so re-running a SAM fetch upserts rather than duplicating staging rows.</description>
    <externalId>true</externalId>
    <label>Dedupe Key</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>