force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Entity_URL__c.field-meta.xml
<CustomField>
    <fullName>Entity_URL__c</fullName>
    <description>Entity URL from SAM.gov coreData (public).</description>
    <label>Entity URL</label>
    <type>Url</type>
</CustomField>