force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error detail if the SAM.gov fetch failed for this row.</description>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>