force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Gate_Results__c.field-meta.xml
<CustomField>
    <fullName>Gate_Results__c</fullName>
    <description>Structured per-row gate/verification log (populated during review/verification).</description>
    <label>Gate Results</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>