force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Last_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Last_Fetched__c</fullName>
    <description>Timestamp of the most recent SAM.gov fetch for this row.</description>
    <label>Last Fetched</label>
    <type>DateTime</type>
</CustomField>