force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deterministic link to the matched Lead (set during matching; blank until then). No write-back occurs in the dormant foundation.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>OA SAM Entity Staging</relationshipLabel>
    <relationshipName>OA_SAM_Entity_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>