force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <description>Legal business name from SAM.gov entity registration.</description>
    <label>Legal Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>