force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <description>Physical address state/province code from SAM.gov coreData.</description>
    <label>Physical State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>