force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Query_Date__c.field-meta.xml
<CustomField>
    <fullName>Query_Date__c</fullName>
    <description>Date the SAM.gov fetch ran.</description>
    <label>Query Date</label>
    <type>Date</type>
</CustomField>