force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration_Date__c</fullName>
    <description>SAM.gov registration expiration date.</description>
    <label>Registration Expiration Date</label>
    <type>Date</type>
</CustomField>