force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <description>SAM.gov entity registration status (e.g. Active, Expired).</description>
    <label>Registration Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>