force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <description>The UEI or legal-name search term that produced this row.</description>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>