force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Source_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Source_Endpoint__c</fullName>
    <description>Full callout path used to retrieve this record (audit; contains no key).</description>
    <label>Source Endpoint</label>
    <type>Url</type>
</CustomField>