force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Source_Payload_Ref__c.field-meta.xml
<CustomField>
    <fullName>Source_Payload_Ref__c</fullName>
    <description>SHA-256 hash reference of identity fields for traceability. NOT the raw payload; no PII or secret stored.</description>
    <label>Source Payload Ref</label>
    <length>64</length>
    <type>Text</type>
</CustomField>