force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/Source_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Run_ID__c</fullName>
    <description>Correlation id for the SAM.gov fetch run (idempotency key part 1).</description>
    <label>Source Run ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>