force-app/main/default/objects/OA_SAM_Entity_Staging__c/fields/UEI__c.field-meta.xml
<CustomField>
    <fullName>UEI__c</fullName>
    <description>SAM.gov Unique Entity Identifier (ueiSAM).</description>
    <label>UEI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>